Adding the deployment_descriptor field with the preliminary validation against whitelist.yml
